<resources>
    <string name="app_name">Doughpaze</string>
    <string name="todo">TODO</string>
    <string name="topPicks">Top Picks For You</string>
    <string name="categories">\   Categories</string>
    <string name="topOffers">\   Top Offers</string>
    <string name="homepage">Home</string>
    <string name="offers">Offers</string>
    <string name="account">Account</string>
    <string name="cakes">Cakes</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="pizza">Pizzas</string>
    <string name="donuts">Donuts</string>
    <string name="pastas">Pastas</string>
    <string name="garlic_breads">Garlic Breads</string>
    <string name="mocktails">Mocktails</string>
    <string name="nachos">Nachos</string>
    <string name="brownies">Brownies</string>
    <string name="moussee">moussee</string>
    <string name="cake_pie">cake Pie</string>
    <string name="milk_cream_special">milk cream special</string>
    <string name="add_to_cart">Add+</string>
    <string name="email">Email/Mobile Number</string>
    <string name="password">Password</string>
    <string name="forget">Forgot Password ?</string>
    <string name="remember_me">Remember me</string>
    <string name="no_account_string">Don\'t have an account ?\ </string>
    <string name="signup_terms_string">By signing in you agree to our\ </string>
    <string name="terms_of_services">Terms of Service</string>
    <string name="username_hint">example@example.com</string>
    <string name="welcome_back">Welcome!</string>
    <string name="PasswordHint">******</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="onllyemail">Email</string>
    <string name="already_have_an_account">Already have an Account ?</string>
    <string name="retype_password">Confirm Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="log_in_with_otp">Login with OTP</string>
    <string name="google">Google</string>
    <string name="facebook">facebook</string>
    <string name="or">Or</string>
    <string name="enter_your_mobile_number_to_proceed">Enter your 10 digit mobile number to proceed</string>
    <string name="_91">+91</string>
    <string name="send_otp">Send OTP</string>
    <string name="creat_account">Creat Account!</string>
    <string name="onlylogin">Login</string>
    <string name="enter_the_otp">Enter the OTP received on your Mobile Number.</string>
    <string name="enter_the_otp_1">Enter the OTP</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="submit">Submit</string>
    <string name="about_us">About Us</string>
    <string name="instagram">instagram</string>
    <string name="cart">\ Cart</string>
    <string name="apply_coupon">APPLY COUPON</string>
    <string name="bill_details">Bill Details</string>
    <string name="item_total">Item Total</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="taxes_and_charges">Taxes and Charges</string>
    <string name="to_pay">To Pay</string>
    <string name="proceed">PROCEED</string>
    <string name="apply_coupons">APPLY COUPONS</string>
    <string name="apply">APPLY</string>
    <string name="get_40_discount_using_axis_bank_select_credit_card">Get 40% discount using Axis Bank Select Credit Card</string>
    <string name="more">+ MORE</string>
    <string name="terms_amp_conditions_apply"><![CDATA[Terms & Conditions Apply]]></string>
    <string name="u25cf_offer_is_valid_on_all_modes_of_payments">Offer is valid on all modes of payments</string>
    <string name="u25cf">●\ </string>
    <string name="other_t_amp_cs_may_apply"><![CDATA[Other T&Cs may apply]]></string>
    <string name="enter_coupon_code">Enter Coupon Code</string>
    <string name="available_coupons">APPLICABLE COUPONS</string>

    //
    <string name="_100indusind">\'100INDUSIND\'</string>
    <string name="applied">"  "applied</string>
    <string name="_87">₹87</string>
    <string name="saving_with_this_coupon">Saving with this coupon</string>
    <string name="pay_with_indusind_credit_card_to_avail_this_offer">Pay with IndusInd credit card to avail\nthis offer</string>
    <string name="yay">YAY!</string>
    <string name="your_address">Your Address</string>
    <string name="use_current_location">"  "Use current location</string>
    <string name="home">" "Home</string>
    <string name="address">address</string>
    <string name="saved_addresses">Saved Addresses</string>
    <string name="add_address">Add New Address</string>
    <string name="landmark">ADDRESS</string>
    <string name="house_flat_block_no">HOUSE / FLAT / BLOCK NO.</string>
    <string name="add_new">Add New +</string>
    <string name="work">" "Work</string>
    <string name="other">" "Other</string>
    <string name="save_for_future">Save For Future</string>
    <string name="address_details">Address Details</string>
    <string name="EnterPasswordNew">Enter the new password you would like to use and \nlogin again\.</string>
    <string name="set_a_new_password">Set a new Password</string>
    <string name="reset_password_with_otp">Reset Password with OTP</string>
    <string name="profile_details">Profile Details</string>
    <string name="edit">edit</string>
    <string name="email_id">Email Id</string>
    <string name="my_account">My Account</string>
    <string name="manage_addresses">\ Manage Addresses</string>
    <string name="payment">\ Payment</string>
    <string name="addresses_payment_favourites_referrals_offers"><![CDATA[Addresses & Payment]]></string>
    <string name="my_transactions">\ My Transactions</string>
    <string name="logout">Logout</string>
    <string name="edit_profile_details">Edit Profile Details</string>
    <string name="email_address">Email Address</string>
    <string name="update">update</string>

    //google api
    <string name="server_client_id">588275575009-i6hi10bdcfcrb9s0q880kebdstqnp7fv.apps.googleusercontent.com</string>
    <string name="secret_key">Ajsw--CiNlw02LYi3_VQTE2W</string>
    <string name="api_key">AIzaSyBbkyU3NIHJV2HiMQXAh40FeO0XFsRkAZM</string>
    <string name="enter_mobile_number">Enter Your Mobile Number</string>
    <string name="enter_your_name">Enter Your Name</string>

    //facebook api

    <string name="facebook_app_id">611652142750083</string>
    <string name="fb_login_protocol_scheme">fb611652142750083</string>
    <string name="invalid_otp">Invalid Otp</string>
    <string name="siddhant_deepak_khobragade">Siddhant Deepak Khobragade</string>
    <string name="rs">Rs.</string>
    <string name="search">Search</string>
    <string name="size">Size</string>
    <string name="cart_is_empty">Cart is Empty</string>
    <string name="get_10_off_over_pizzas">Get 10% off over Pizzas</string>
    <string name="bill_total">\  Bill Total :</string>
    <string name="proceed_to_pay">Place Order</string>
    <string name="cash_on_delivery">\Cash On Delivery</string>
    <string name="pay_online">\Pay Online</string>

    <string name="my_transactions_amp_norders"><![CDATA[My Transactions &\nOrders]]></string>
    <string name="amount_paid">Total Amount : </string>
    <string name="reorder">Reorder</string>
    <string name="small">Small -\ </string>
    <string name="delivery_address">Delivery Address</string>
    <string name="terms_and_policies">Terms and Policies</string>
    <string name="help_contact_us">Help/Contact Us</string>
    <string name="feedback">Feedback</string>
    <string name="order_placed_nsuccessfully">Order Placed\nSuccessfully !!</string>
    <string name="cancel">Cancel</string>
    <string name="order_id">Order ID :\ </string>
    <string name="payment_mode">Payment Mode :\ </string>
    <string name="online">Online</string>
    <string name="transaction_id">Transaction ID :\ </string>
    <string name="status">Status :\ </string>
    <string name="received">Received</string>
    <string name="date">Date :\ </string>
    <string name="discount">Discount</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="tell_us_what_you_love_about_the_app_or_what_could_be_we_doing_better">Tell us what you love about the app or what could be we doing better?</string>
    <string name="enter_feedback">Enter feedback</string>
    <string name="help_or_contact_us">Help Or Contact Us</string>
    <string name="coupon_applied">Coupon Applied</string>
    <string name="order_details">Order Details</string>
    <string name="bck_to_home">Back to home</string>
    <string name="select_pizza_size">Select Pizza Size</string>
    <string name="large">Large</string>
    <string name="select_quantity">Select Quantity</string>
    <string name="largeee">Large -\ </string>
    <string name="smallll">Small</string>
    <string name="add_to_cart2">add to cart</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="more_coupons">MORE COUPONS</string>
    <string name="please_describe_your_query_regarding_the_help_or_support_required">Please describe your query regarding the help or support required.</string>
    <string name="enter_your_query_here">Enter your query here</string>
    <string name="save_address">Save Address</string>
    <string name="coupon_name">Coupon Name :\ </string>
    <string name="delivery_address2">Delivery Address :\ </string>
    >>>>>>> fd2a430ea5c89a347bfea37eff252d789e63a659

    <string-array name="PizzaSize">
        <item>Small</item>
        <item>Large</item>
    </string-array>

    <string name="service_not_available">Error</string>
    <string name="no_address_found">Address Not Foubd</string>
    <string name="oh_no">Oh No!!</string>
    <string name="no_internet_found_nplease_check_your_connection">No internet found.\nPlease check your connection or\nSwipe down to Refresh\nOr</string>
    <string name="retry">Retry</string>
    <string name="sorry_coupon_s_are_not_available">Sorry, no coupon\'s are available\nat present.</string>
    <string name="you_don_t_have_any_saved_naddress_add_new_to_place_the_orders_easily">You don\'t have any saved\naddress, add new to place the orders easily.</string>
    <string name="check_payment_status">check payment status</string>
    <string name="my_transactions_and_norders">My Transactions and\nOrders</string>


</resources>