<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:title="@string/about_us"
        android:visible="true">
        <menu>
            <item
                android:id="@+id/facebook_about"
                android:icon="@drawable/facebook"
                android:title="@string/facebook" />
            <item
                android:id="@+id/terms_policies"
                android:icon="@drawable/ic_baseline_policy_24"
                android:iconTint="@color/colorPrimaryText"
                android:title="@string/terms_and_policies" />
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/feedback"
            android:icon="@drawable/ic_baseline_feedback_24"
            android:iconTint="@color/colorPrimaryText"
            android:title="@string/feedback" />
        <item
            android:id="@+id/help_support"
            android:icon="@drawable/ic_baseline_help_outline_24"
            android:iconTint="@color/colorPrimaryText"
            android:title="@string/help_contact_us" />
    </group>
</menu>