<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".location_activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="32dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:text="@string/address_details"
                android:textColor="@color/colorPrimaryText"
                android:textSize="30sp" />

            <Button
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/signup_bordershape"
                android:drawableStart="@drawable/ic_my_location_black_24dp"
                android:drawableTint="@color/colorPrimary"
                android:elevation="8dp"
                android:padding="8dp"
                android:text="@string/use_current_location"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                tools:targetApi="m" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:text="@string/or"
                android:textColor="@color/colorPrimaryText"
                android:textSize="18sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/house_flat_input"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/house_flat_block_no"
                app:boxStrokeColor="@color/colorPrimary"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/colorPrimaryText">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_house"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:textColor="@color/colorPrimaryText"
                    android:textCursorDrawable="@null" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_landmark"
                style="@style/Widget.Design.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/landmark"
                app:boxStrokeColor="@color/colorPrimary"
                app:boxStrokeWidthFocused="2dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/colorPrimaryText">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_land"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:textColor="@color/colorPrimaryText"
                    android:textCursorDrawable="@null" />


            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/home_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_home_black_24dp"
                    android:text="@string/home" />

                <RadioButton
                    android:id="@+id/work_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_work"
                    android:text="@string/work" />

                <RadioButton
                    android:id="@+id/other_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_other_location"
                    android:text="@string/other" />


            </RadioGroup>


            <CheckBox
                android:id="@+id/save_for_future"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:text="@string/save_for_future" />


            <Button
                android:id="@+id/proceed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/login_bordershape"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/proceed"
                android:visibility="visible"
                android:textColor="@color/colorPrimaryText"
                android:textSize="24sp" />

            <Button
                android:id="@+id/Save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/login_bordershape"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/save_address"
                android:textColor="@color/colorPrimaryText"
                android:textSize="24sp" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>